--- a/TestApp7/build.gradle
+++ b/TestApp7/build.gradle
@@ -11,9 +11,10 @@ repositories {
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
@@ -21,7 +22,7 @@ android {
     defaultConfig {
         applicationId "com.trueconf.sample.TestApp7"
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion 35
     }
 
     buildFeatures {
@@ -37,9 +38,10 @@ android {
 }
 
 dependencies {
-    api 'com.trueconf:trueconfsdk:3.0.0.49@aar'
-    api 'com.trueconf:media:3.0.0.49@aar'
-    api 'com.trueconf:jnicore:3.0.0.49@aar'
+    api 'com.trueconf:trueconfsdk:3.0.7.65@aar'
+    api 'com.trueconf:media:3.0.7.65@aar'
+    api 'com.trueconf:jnicore:3.0.7.65@aar'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
     implementation 'androidx.work:work-runtime:2.9.0'
     implementation 'androidx.concurrent:concurrent-futures:1.1.0'
     implementation 'androidx.core:core:1.12.0'
